@@ -1,88 +1,0 @@
-usr/bin/kinfocenter
-usr/lib/kde4/kcm_info.so
-usr/lib/kde4/kcm_ioslaveinfo.so
-usr/lib/kde4/kcm_memory.so
-usr/lib/kde4/kcm_nic.so
-usr/lib/kde4/kcm_opengl.so
-usr/lib/kde4/kcm_partition.so
-usr/lib/kde4/kcm_pci.so
-usr/lib/kde4/kcm_samba.so
-usr/lib/kde4/kcm_solidproc.so
-usr/lib/kde4/kcm_usb.so
-usr/lib/libkdeinit4_kinfocenter.so
-usr/share/applications/kde4/kinfocenter.desktop
-usr/share/doc/kde/HTML/en/kinfocenter/common
-usr/share/doc/kde/HTML/en/kinfocenter/devices/common
-usr/share/doc/kde/HTML/en/kinfocenter/devices/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/devices/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/dma/common
-usr/share/doc/kde/HTML/en/kinfocenter/dma/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/dma/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/interrupts/common
-usr/share/doc/kde/HTML/en/kinfocenter/interrupts/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/interrupts/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/ioports/common
-usr/share/doc/kde/HTML/en/kinfocenter/ioports/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/ioports/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/kinfocenter.png
-usr/share/doc/kde/HTML/en/kinfocenter/memory/common
-usr/share/doc/kde/HTML/en/kinfocenter/memory/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/memory/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/nics/common
-usr/share/doc/kde/HTML/en/kinfocenter/nics/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/nics/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/opengl/common
-usr/share/doc/kde/HTML/en/kinfocenter/opengl/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/opengl/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/partitions/common
-usr/share/doc/kde/HTML/en/kinfocenter/partitions/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/partitions/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/pci/common
-usr/share/doc/kde/HTML/en/kinfocenter/pci/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/pci/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/processor/common
-usr/share/doc/kde/HTML/en/kinfocenter/processor/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/processor/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/protocols/common
-usr/share/doc/kde/HTML/en/kinfocenter/protocols/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/protocols/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/samba/common
-usr/share/doc/kde/HTML/en/kinfocenter/samba/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/samba/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/scsi/common
-usr/share/doc/kde/HTML/en/kinfocenter/scsi/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/scsi/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/sound/common
-usr/share/doc/kde/HTML/en/kinfocenter/sound/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/sound/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/usb/common
-usr/share/doc/kde/HTML/en/kinfocenter/usb/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/usb/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/view1394/common
-usr/share/doc/kde/HTML/en/kinfocenter/view1394/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/view1394/index.docbook
-usr/share/doc/kde/HTML/en/kinfocenter/xserver/common
-usr/share/doc/kde/HTML/en/kinfocenter/xserver/index.cache.bz2
-usr/share/doc/kde/HTML/en/kinfocenter/xserver/index.docbook
-usr/share/kde4/apps/kcmusb/usb.ids
-usr/share/kde4/apps/kinfocenter/about/kinfocenter.css
-usr/share/kde4/apps/kinfocenter/about/main.html
-usr/share/kde4/apps/kinfocenter/kinfocenterui.rc
-usr/share/kde4/services/devices.desktop
-usr/share/kde4/services/dma.desktop
-usr/share/kde4/services/interrupts.desktop
-usr/share/kde4/services/ioports.desktop
-usr/share/kde4/services/ioslaveinfo.desktop
-usr/share/kde4/services/kcm_memory.desktop
-usr/share/kde4/services/kcm_partition.desktop
-usr/share/kde4/services/kcm_pci.desktop
-usr/share/kde4/services/kcmsolidproc.desktop
-usr/share/kde4/services/kcmusb.desktop
-usr/share/kde4/services/nic.desktop
-usr/share/kde4/services/opengl.desktop
-usr/share/kde4/services/scsi.desktop
-usr/share/kde4/services/smbstatus.desktop
-usr/share/kde4/services/sound.desktop
-usr/share/kde4/services/xserver.desktop
