@@ -1,3 +1,0 @@
-usr/lib/kde4/kcm_view1394.so
-usr/share/kde4/apps/kcmview1394/oui.db
-usr/share/kde4/services/kcmview1394.desktop
